[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
midoku-bindings = { git = "https://github.com/midokuapp/midoku-rs.git" }
midoku-macros = { path = "crates/midoku-macros" }
dark-light = "2.0.0"
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus = "0.6.1"
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
dirs = "5.0.1"
flate2 = "1.0.34"
futures-lite = "2.5.0"
jni = "0.21.1"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0.217"
serde_json = "1.0.134"
tar = "0.4.43"
thiserror = "2.0.9"

[package]
name = "midoku"
version = "0.1.0"
authors = ["Youn Mélois <youn@melois.dev>"]
edition.workspace = true
publish.workspace = true

[dependencies]
midoku-bindings.workspace = true
midoku-macros.workspace = true
dioxus = { workspace = true, features = ["router"] }
dioxus-free-icons.workspace = true
flate2.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
dark-light.workspace = true
dirs.workspace = true
futures-lite.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

[features]
default = ["mobile"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
