[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
midoku-bindings = { git = "https://github.com/midokuapp/midoku-rs.git" }
midoku-config = { path = "crates/midoku-config" }
midoku-macros = { path = "crates/midoku-macros" }
midoku-path = { path = "crates/midoku-path" }
midoku-store = { path = "crates/midoku-store" }
midoku-theme = { path = "crates/midoku-theme" }
const_format = "0.2.34"
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus = "0.6.2"
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
fast_image_resize = { version = "5.1.0", features = ["image"] }
flate2 = "1.0.34"
image = "0.25.5"
rayon = "1.10.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
serde = "1.0.217"
serde_json = "1.0.134"
tar = "0.4.43"
thiserror = "2.0.9"
tokio = "1.43.0"
urlencoding = "2.1.3"

[package]
name = "midoku"
version = "0.1.0"
authors = ["Youn Mélois <youn@melois.dev>"]
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[dependencies]
midoku-bindings.workspace = true
midoku-config.workspace = true
midoku-path.workspace = true
midoku-store.workspace = true
midoku-theme.workspace = true
const_format.workspace = true
dioxus = { workspace = true, features = ["router"] }
dioxus-free-icons.workspace = true
fast_image_resize.workspace = true
flate2.workspace = true
image.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
urlencoding.workspace = true

[build-dependencies]
const_format.workspace = true
reqwest = { workspace = true, features = ["blocking"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
