[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[package]
name = "src-tauri"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
log = "0.4"
midoku-bindings = { git = "https://github.com/midokuapp/midoku-rs.git", rev = "0696331e6a851ce34b0ca31282992ac83667f36f" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1.40.0", features = ["full"] }
