[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
flate2 = "1.0.34"
log = "0.4.22"
midoku-bindings = { git = "https://github.com/midokuapp/midoku-rs.git" }
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
tar = "0.4.43"
tauri = { version = "2.0.6", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.2"
tauri-plugin-store = "2.1.0"
tauri-plugin-http = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }

# Dependencies for mobile targets
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-theme = "2.1.2"
