[package]
name = "src-ui"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
deunicode = { workspace = true }
html-escape = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-remix-icon = { workspace = true }
leptos_meta = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true, features = ["csr"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
