[package]
name = "midoku-path"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
midoku-config.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
dirs = "5.0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[lints]
workspace = true
