[package]
name = "midoku-theme"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.10.2"

[lints]
workspace = true
